--- a/css/style.css
+++ b/css/style.css
@@ -347,13 +347,17 @@ a {
 }
 
 .modal {
-  position: relative;
+  position: fixed;
+  top: 50%;
+  left: 50%;
   display: none;
   width: 770px;
   padding: 70px 100px 84px;
   margin: 0 auto;
+  transform: translate(-50%, -50%);
   box-shadow: 0 20px 40px rgba(0, 1, 1, 0.75);
   margin-bottom: 50px;
+  background-color: #fff;
 }
 
 .modal_active {
