--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,24 @@ body {
   margin: 0 auto;
 }
 
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 a {
   text-decoration: none;
 }
@@ -23,7 +41,9 @@ a {
   text-transform: uppercase;
   color: #ffffff;
   padding: 15px 50px;
+  border-radius: 3px;
   cursor: pointer;
+  transition: 0.5s;
 }
 
 .btn:hover {
@@ -434,4 +454,431 @@ a {
   height: 118px;
   border: 2px solid #d7dcde;
   margin-bottom: 47px;
+}
+
+
+
+/* стили для каталога */
+.catalog {
+  display: flex;
+  margin-bottom: 50px;
+}
+
+.catalog-title {
+  margin: 0;
+  padding: 0;
+  font-size: 55px;
+  font-weight: 500;
+  line-height: 55px;
+  margin-top: 30px;
+  padding-bottom: 110px;
+  text-align: center;
+}
+
+.filters {
+  width: 260px;
+  padding-bottom: 60px;
+  padding-right: 140px;
+}
+
+.filter ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.filter-item {
+  margin: 0;
+  padding: 0;
+  border: none;
+  margin-bottom: 50px;
+}
+.filter-item:last-child {
+  margin-bottom: 0;
+}
+
+.range-filter {
+  width: 260px;
+  margin-top: 49px;
+}
+
+.filter-item legend {
+  font-size: 18px;
+  line-height: 30px;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-bottom: 25px;
+}
+
+.range-controls {
+  position: relative;
+  height: 41px;
+  background-color: #f1f1f1;
+  margin-bottom: 15px;
+  padding-top: 39px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.range-controls .bar {
+  width: 70%;
+  height: 2px;
+  background-color: #00ca74;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: #d7dcde;
+}
+
+.range-controls .toggle {
+  position: absolute;
+  top: 31px;
+  left: 0;
+  width: 4px;
+  height: 4px;
+  padding: 0;
+  border: 8px solid #ffffff;
+  background-color: #ababab;
+  border-radius: 50%;
+  box-shadow: 0 2px 1px 0 #cfcfcf;
+  cursor: pointer;
+}
+
+.range-controls .toggle-min {
+  left: 18px;
+}
+
+.range-controls .toggle-max {
+  left: 160px;
+}
+
+.price-controls {
+  font-size: 0;
+}
+
+.price-controls label {
+  display: inline-block;
+  width: 50%;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.price-controls input {
+  width: 60px;
+  padding: 8px 10px;
+  margin-left: 10px;
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 16px;
+  text-align: center;
+  color: #283136;
+  border: none;
+  border-radius: 5px;
+  background: #f1f1f1;
+}
+
+.max-price {
+  text-align: right;
+}
+
+.filter-option {
+  margin-bottom: 19px;
+  padding-left: 40px;
+}
+
+.filter-option:last-child {
+  margin-bottom: 0;
+}
+
+.filter-option label {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  user-select: none;
+}
+
+.checkbox + label::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -35px;
+  width: 27px;
+  height: 23px;
+  background-image: url('../img/checkbox-off.svg');
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.checkbox:checked + label::after {
+  content: '';
+  position: absolute;
+  top: 0px;
+  left: -35px;
+  width: 27px;
+  height: 23px;
+  background-image: url('../img/checkbox-on.svg');
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.radio + label::before {
+  content: '';
+  position: absolute;
+  width: 23px;
+  height: 23px;
+  border: 2px solid #4d4d4d;
+  border-radius: 50%;
+  opacity: 0.4;
+  top: -1px;
+  left: -35px;
+}
+
+.radio:checked + label::after {
+  content: '';
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background-color: #4d4d4d;
+  opacity: 0.4;
+  top: 8px;
+  left: -25px;
+  border-radius: 50%;
+}
+
+.filter-btn {
+  width: 260px;
+  background-color: #eeeeee;
+  color: #000000;
+}
+
+.filter-btn:hover {
+  background-color: #dfdfdf;
+}
+
+.filter-btn:active {
+  box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+  background-color: #d5d5d5;
+}
+
+.sorting {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+.sorting-title {
+  margin: 0;
+	font-size: 18px;
+	line-height: 1;
+	text-transform: uppercase;
+	width: 360px;
+	margin-bottom: 52px;
+}
+.sorting-list {
+	display: flex;
+	flex-wrap: wrap;
+  width: 360px;
+  margin: 0;
+	margin-bottom: 52px;
+}
+.sorting-list-icons {
+	position: relative;
+}
+.sorting-list-item {
+	position: absolute;
+	opacity: 0.2;
+}
+.sorting-list-bottom {
+	right: 30px;
+	bottom: 52px;
+}
+.sorting-list-top {
+	right: 0;
+	bottom: 52px;
+}
+
+.sorting-list-item:hover,
+.sorting-list-item:focus {
+	opacity: 0.6;
+}
+.sorting-list-item:active {
+	opacity: 1;
+}
+.sorting-list li {
+	margin-right: 28px;
+	list-style: none;
+}
+.sorting-list a {	
+	margin: 0;
+	padding: 0;	
+	font-size: 14px;
+	line-height: 18px;
+	text-transform: uppercase;
+	color: #000000;
+	opacity: 0.3;
+	text-decoration: none;
+}
+.sorting-list .sorting-active {
+	color: #000000;
+	opacity: 1;
+}
+.sorting-list a:focus, 
+.sorting-list a:hover {
+	opacity: 0.6;
+}
+.sorting-list a:active {
+	opacity: 1;
+}
+.catalog-product {
+	width: 760px;
+	padding-bottom: 50px;
+}
+.catalog-product-list {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0;
+	padding: 0;
+}
+.catalog-product-item:nth-child(2n) {
+  margin-right: 0;
+}
+.catalog-product-item {
+	display: block;
+	position: relative;
+	text-align: left;
+	padding: 0;
+	margin: 0;
+	border: 0;
+	width: 360px;
+	margin-bottom: 27px;
+	margin-right: 40px;
+}
+.catalog-product-item::before {
+	content: "";
+	display: block;
+	height: 40px;
+	background-color: #e9e9e9;
+	border-radius: 5px 5px 0 0;
+}
+.catalog-product-item::after {
+	content: "";
+	display: block;
+	position: absolute;
+	width: 14px;
+	height: 14px;
+	background-color: #ffffff;
+	border-radius: 50%;
+	top: 13px;
+	left: 16px;
+	box-shadow: 25px 0 0 0 #ffffff,
+				50px 0 0 0 #ffffff;
+}
+.catalog-product-item:focus::before,
+.catalog-product-item:hover::before {
+	background-color: #4d4d4d;
+}
+.catalog-product-info {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	box-sizing: border-box;
+	width: 100%;
+	bottom: 7px;
+	background-color: #eeeeee;
+	z-index: -1;
+	margin: 0;
+	padding: 0;
+	vertical-align: center;
+}
+.catalog-product-info-title {
+	margin-top: 25px;
+	margin-bottom: 0;
+	margin-left: 60px;
+	margin-right: 60px;
+	text-transform: uppercase;
+	font-size: 18px;
+	line-height: 30px;
+	font-weight: 700;
+	color: #000000;
+}
+.catalog-product-info-title:hover, 
+.catalog-product-info-title:focus {
+	color: #fb565a;
+}
+.catalog-product-info-title:active {
+	color: #000000;
+	opacity: 0.3;
+}
+.catalog-product-info p {
+	font-size: 16px;
+	line-height: 18px;
+	color: #666666;
+	margin-left: 60px;
+	margin-right: 60px;
+	margin-bottom: 30px;
+	text-align: center;
+}
+.catalog-product-info .button {
+	width: 200px;
+	margin-bottom: 43px;
+}
+.catalog-product-item:hover .catalog-product-info,
+.catalog-product-item:focus .catalog-product-info  {
+	z-index: 5;
+}	
+/* === товары === */ /*end*/
+/* === нумерация === */ /*start*/
+.pagination-list {
+	display: flex;
+	padding: 0;
+	margin: 0;
+	margin-top: 39px;
+	margin-bottom: 22px;
+	list-style: none;
+}
+.pagination-list li {
+	list-style: none;
+}
+.pagination-button:last-child a {
+	padding-left: 80px;
+	padding-right: 80px;
+}
+.pagination-button a {
+	font: inherit;
+	font-size: 16px;
+	line-height: 18px;
+	text-transform: uppercase;
+	font-weight: 500;
+	color: #000000;
+	background-color: #eeeeee;
+	padding: 15px 20px;
+	margin-right: 10px;
+	border-radius: 3px;
+}
+.pagination-button a:hover,
+.pagination-button a:focus {
+	background-color: #dfdfdf;
+}
+.pagination-button a:active {
+	background-color: #d5d5d5;
+	color: rgba(0, 0, 0, 0.3);
+	box-shadow: inset 0	3px 0 rgba(0, 0, 0, 0.1);
+}
+.pagination-active a {
+	font-size: 16px;
+	line-height: 18px;
+	text-transform: uppercase;
+	font-weight: 500;
+	background-color: #ffffff;
+	border: 3px solid #dbdbdb;
+	padding: 12px 18px;
+	margin-right: 12px;
+	border-radius: 3px;
+}
+
+.catalog-product-item .btn {
+  display: block;
+  margin-bottom: 30px;
 }
