--- a/css/style.css
+++ b/css/style.css
@@ -366,6 +366,49 @@ a {
   line-height: 22px;
 }
 
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateX(100px);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
 .modal {
   position: fixed;
   top: 50%;
@@ -380,8 +423,13 @@ a {
   background-color: #fff;
 }
 
-.modal_active {
+.modal-show {
   display: block;
+  animation: bounce 0.6s;
+}
+
+.modal-error {
+  animation: shake 0.6s;
 }
 
 .modal-close {
@@ -440,11 +488,15 @@ a {
 
 .modal input {
   margin-bottom: 35px;
-  width: 360px;
+  width: 350px;
   height: 50px;
-
+  padding-left: 10px;
 }
 
+.modal input:hover, :focus {
+  border: 2px solid #313638;
+  outline: none;
+}
 .modal-item:first-child {
   margin-right: 40px;
 }
@@ -454,6 +506,13 @@ a {
   height: 118px;
   border: 2px solid #d7dcde;
   margin-bottom: 47px;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.modal textarea:hover {
+  border: 2px solid #313638;
+  outline: none;
 }
 
 
